Correção de nomes do HTML

--- a/sociologia.html
+++ b/sociologia.html
@@ -257,7 +257,7 @@
     <div class="autor">
       <span>👤 Por Danilo Jorge</span>
       <span style="margin-left:16px;">🕓 10/10/2025</span>
-      <span style="margin-left:16px;">👩‍🏫 Professora Ivonete</span>
+      <span style="margin-left:16px;">👩‍🏫 Professora Júlia Milani</span>
     </div>
 
     <figure>
@@ -362,7 +362,7 @@
     <div class="rodape-container">
       <div class="rodape-grade">
       <div class="rodape-final">
-        © 2025 Danilo Jorge e Professora Ivonete - Todos os direitos reservados
+        © 2025 Danilo Jorge e Professora Júlia Milani - Todos os direitos reservados
       </div>
     </div>
   </footer>
