Correção de nomes do HTML

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <div class="autor">
       <span>👤 Por Danilo Jorge</span>
       <span style="margin-left:16px;">🕓 10/10/2025</span>
-      <span style="margin-left:16px;">👩‍🏫 Professora Ivonete</span>
+      <span style="margin-left:16px;">👩‍🏫 Professora Ivonete Parentes Pereira</span>
     </div>
 
     <figure>
@@ -358,9 +358,10 @@
     <div class="rodape-container">
       <div class="rodape-grade">
       <div class="rodape-final">
-        © 2025 Danilo Jorge e Professora Ivonete - Todos os direitos reservados
+        © 2025 Danilo Jorge e Professora Ivonete Parentes Pereira - Todos os direitos reservados
       </div>
     </div>
   </footer>
 </body>
+
 </html>
